- revised the compress api to store in same name after finishing encoding
