# docs/swagger.yaml
@@ -47,11 +47,6 @@ paths:
         in: formData
         name: ffmpegStr
         type: string
-      - default: videoclips
-        in: formData
-        name: folder
-        required: true
-        type: string
       - default: /mnt/streamstudio
         in: formData
         name: mountPath
@@ -89,11 +84,6 @@ paths:
       - multipart/form-data; boundary=normal
       description: execution will upload any file in raw format
       parameters:
-      - default: videoclips
-        in: formData
-        name: folder
-        required: true
-        type: string
       - default: /mnt/streamstudio
         in: formData
         name: mountPath
