# src/controllers/v1/files/compressUploadFile.go
@@ -34,12 +34,10 @@ func UploadCompressFile(gtx *gin.Context) {
 		return
 	}
 
-	fileName := gtx.PostForm("name")
-	folder := gtx.PostForm("folder")
-
 	mountPath := gtx.PostForm("mountPath")
-	destinationPath := funtions.MakeDirSync(mountPath, folder)
+	destinationPath := funtions.MakeDirSync(mountPath)
 
+	fileName := gtx.PostForm("name")
 	uploadedFileName, err1 := services.SaveFileToDir(gtx, file, fileName, destinationPath)
 	if err1 != nil {
 		funtions.ErrorResponse(gtx, "File upload error", err1.Error())
@@ -49,28 +47,28 @@ func UploadCompressFile(gtx *gin.Context) {
 	ffmpegStr := gtx.PostForm("ffmpegStr")
 	outputFormat := gtx.PostForm("outputFormat")
 
+	fileInputForFfmpeg := destinationPath + "/" + uploadedFileName
 	fileDestWithFfmpeg := services.GenerateFfmpegFileName(uploadedFileName, outputFormat)
 	fileDestWithFfmpeg = destinationPath + "/" + fileDestWithFfmpeg
-	fileInputWithFfmpeg := destinationPath + "/" + uploadedFileName
 
 	apiResponseMessage := "File uploaded and encoded successfully"
 	if gtx.PostForm("encodeWaiting") == "true" {
-		_, err2 := services.SaveWithFfmpegTool(fileInputWithFfmpeg, fileDestWithFfmpeg, ffmpegStr)
+		_, err2 := services.SaveWithFfmpegTool(fileInputForFfmpeg, fileDestWithFfmpeg, ffmpegStr)
 		if err2 != nil {
-			funtions.ErrorResponse(gtx, "File encoding error", err2.Error())
+			log.Println("File encoding of " + uploadedFileName + "error " + err2.Error())
 			return
 		}
 	} else {
 		apiResponseMessage = "File uploaded and put in encoding queue successfully"
 		go func() {
-			_, err2 := services.SaveWithFfmpegTool(fileInputWithFfmpeg, fileDestWithFfmpeg, ffmpegStr)
+			_, err2 := services.SaveWithFfmpegTool(fileInputForFfmpeg, fileDestWithFfmpeg, ffmpegStr)
 			if err2 != nil {
 				log.Println("File encoding of " + uploadedFileName + "error " + err2.Error())
 			}
 		}()
 	}
 	funtions.SuccessResponse(gtx, apiResponseMessage, 1, gin.H{
-		"fileName":     fileDestWithFfmpeg,
+		"fileName":     fileInputForFfmpeg,
 		"orifinalSize": file.Size,
 	})
 }
